# hack-nation

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  demo_seed.py  main.py  models.py  schemas.py
backend/app/api/: applications.py  founders.py  pipeline.py  query.py  sourcing.py  thesis.py
backend/app/ingestion/: deck_parser.py  enrichment.py  load_synthetic.py  pipeline.py
backend/app/reasoning/: __init__.py  analysis.py  backend.py  context.py  diligence.py  diligence_all.py  diligence_backend.py  diligence_context.py  diligence_offline.py  diligence_openai.py  diligence_schemas.py  edge.py  founder_score.py  mandate.py  matching.py  memo.py  offline_backend.py  openai_backend.py  query.py  recombination.py  schemas.py  score_all.py  service.py  team.py  thesis_fit.py  trace.py
backend/app/sourcing/: __init__.py  arxiv.py  classify.py  client.py  github.py  hn.py  news.py  outreach.py  service.py
backend/data/decks/: bloomwell_deck.txt  heliohealth_deck.txt  ledgerly_deck.txt  slopana_deck.txt  tensorforge_deck.txt
backend/data/synthetic/: 01_vecta.json  02_tensorforge.json  03_shimmer.json  04_vectorly.json  05_ledgerly.json  06_heliohealth.json  07_cohortiq.json  08_runway_robotics.json  09_bloomwell.json  10_prompture.json  11_careloop.json  12_fitns.json  13_loomctl.json  14_quantify_labs.json  15_neurostack.json  16_slopana.json  17_chainmail_pay.json  18_hedgehog.json  19_devpilot.json  20_vitalink.json
frontend/: README.md  next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
(+47 files in other folders)
