[project]
name = "vc-brain-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
